# automagik-telemetry

./: .env.example  .gitignore  .mcp.json  .npmrc  .pre-commit-config.yaml  CLAUDE.md  CONSISTENCY_REPORT.md  CONTRIBUTING.md  DOCUMENTATION_ANALYSIS.md  DOCUMENTATION_REORGANIZATION_PLAN.md  INFRASTRUCTURE_REVIEW_REPORT.md  INTEGRATION_TESTS.md  INTEGRATION_TESTS_SUMMARY.md  Makefile  PYTHON_SDK_CONSISTENCY_REVIEW.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SDK_PARITY_REPORT.md  test_telemetry_local.py
docs/: CLICKHOUSE_BACKEND_GUIDE.md  CONFIGURATION_REFERENCE.md  CONVENTIONS.md  COVERAGE.md  GETTING_STARTED.md  IMPLEMENTATION_GUIDE.md  INDEX.md  INTEGRATION_TESTS_SUMMARY.md  METRICS_LOGS_SCHEMA.md  MIGRATION_GUIDE.md  PRIVACY_POLICY.md  PYTHON_INITIALIZATION_GUIDE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REORGANIZATION_SUMMARY.md  TELEMETRY_DEVELOPMENT_GUIDE.md
examples/: README.md
infra/: .env.example  CLICKHOUSE_BACKEND_DESIGN.md  CLICKHOUSE_VERIFICATION.md  Makefile  PRODUCTION_COMPATIBILITY.md  (+3 more)
python/: README.md  pyproject.toml
python/src/automagik_telemetry/: __init__.py  client.py  config.py  opt_in.py  privacy.py
python/src/automagik_telemetry/backends/: __init__.py  base.py  clickhouse.py  otlp.py
python/tests/: INTEGRATION_TESTS_README.md  conftest.py  test_advanced_features.py  test_async.py  test_backend_error_coverage.py  test_clickhouse_backend.py  test_clickhouse_metrics_logs.py  test_client.py  test_config.py  test_coverage_complete.py  test_coverage_edge_cases.py  test_integration_fastapi.py  test_integration_memory.py  test_integration_otlp.py  test_integration_throughput.py  test_opt_in.py  test_performance.py  test_privacy.py  test_schema.py
python/tests/integration/: README.md  test_clickhouse_integration.py
(+98 files in other folders)
